--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -187,6 +187,18 @@
     background-color: #45a049;
 }
 
+.btn_danger {
+
+    background-color: red;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    /* margin-left: 10%; */
+}
+
 .form_exp {
     text-align: center;
 }
@@ -361,10 +373,7 @@
 }
 
 .in1 {
-    /* width: auto;
-    border: 5px ridge gray;
-    color: black;
-    padding: 5px; */
+    font-size: large;
 }
 
 .in2 {
